--- a/templates/passenger_profile.html
+++ b/templates/passenger_profile.html
@@ -8,6 +8,7 @@
         <h1 class="text-2xl font-bold text-gray-800 mb-6 dark:text-white">Manage Your Profile</h1>
 
         <form method="POST" action="{{ url_for('passenger_profile') }}" enctype="multipart/form-data" class="space-y-6 max-w-lg">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             
             <div class="flex items-center space-x-4">
                 <img id="settings-avatar" src="/{{ current_user.profile_picture or 'static/img/default_avatar.png' }}" class="h-20 w-20 rounded-full object-cover border-2 border-gray-200 dark:border-gray-600" alt="Your Avatar">
