--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -294,7 +294,7 @@
                     <img id="sidebar-avatar" src="/{{ current_user.profile_picture or 'static/img/default_avatar.png' }}" class="h-10 w-10 rounded-full object-cover flex-shrink-0" alt="{{ _('dispatcher') }}">
                     <div class="ml-3">
                         <p class="text-sm font-semibold text-primary">{{ current_user.username | capitalize }}</p>
-                        <a href="{{ url_for('logout') }}" class="text-xs text-red-500 hover:underline">{{ _('logout') }}</a>
+                        <a href="{{ url_for('auth.logout') }}" class="text-xs text-red-500 hover:underline">{{ _('logout') }}</a>
                     </div>
                 </div>
             </div>
